# sqllogictest-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: ci.yml  release-notes.py  release.yml
docs/: demo.tape
examples/: basic.rs  condition.rs  file_level_sort_mode.rs  file_level_sort_mode.slt  include.rs  include_1.slt  include_2.slt  rowsort.rs  test_dir_escape.rs  test_dir_escape.slt  validator.rs  validator.slt
examples/basic/: Cargo.toml  basic.slt
examples/basic/examples/: basic.rs
examples/condition/: Cargo.toml  condition.slt
examples/condition/examples/: condition.rs
examples/connection/: Cargo.toml  connection.slt
examples/connection/examples/: connection.rs
examples/custom_type/: Cargo.toml  custom_type.slt
examples/custom_type/examples/: custom_type.rs
examples/file_level_sort_mode/: Cargo.toml
examples/file_level_sort_mode/examples/: file_level_sort_mode.rs
examples/include/: Cargo.toml
examples/include/examples/: include.rs
examples/include/include/: a.slt
examples/rowsort/: Cargo.toml  rowsort.slt
examples/rowsort/examples/: rowsort.rs
examples/system_command/: Cargo.toml  system_command.slt
examples/system_command/examples/: system_command.rs
examples/test_dir_escape/: Cargo.toml
examples/test_dir_escape/examples/: test_dir_escape.rs
examples/validator/: Cargo.toml
examples/validator/examples/: validator.rs
sqllogictest/: Cargo.toml  README.md
sqllogictest-bin/: Cargo.toml  README.md
sqllogictest-bin/src/: engines.rs  lib.rs  main.rs
sqllogictest-bin/src/engines/: external.rs  mod.rs  postgres.rs  postgres_extended.rs  postgres_extended_test.slt
sqllogictest-engine/: Cargo.toml
sqllogictest-engine/src/: external.rs  lib.rs  postgres.rs
sqllogictest-engine/src/postgres/: extended.rs  simple.rs
sqllogictest-engines/: Cargo.toml
sqllogictest-engines/src/: external.rs  lib.rs  mysql.rs  postgres.rs
sqllogictest-engines/src/postgres/: error.rs  extended.rs  postgres_extended_test.slt  postgres_simple_test.slt  simple.rs
sqllogictest/src/: column_type.rs  connection.rs  fmt.rs  harness.rs  lib.rs  parser.rs  runner.rs  substitution.rs
src/: lib.rs  main.rs  parser.rs  runner.rs
tests/: Cargo.toml  harness.rs  sqlite.rs
tests/columns/: columns.slt
tests/custom_type/: custom_type.rs  custom_type.slt
tests/let/: basic.slt  let_test.rs
tests/no_run/: README.md  statement_retry.slt  system_retry.slt
tests/retry/: query_retry.slt  statement_retry.slt
tests/slt/: a.slt  basic.slt  comments.slt  condition.slt  error_sqlstate.slt  error_sqlstate_parsing.slt  file_level_sort_mode.slt  multiline_query.slt  retry.slt  rowsort.slt  valuesort.slt
tests/slt/b/: b.slt
tests/slt/connection/: counter.slt
tests/slt/include/: include_1.slt
tests/slt/include/include/: a.slt.part  b.slt.part
tests/substitution/: basic.slt  substitution.rs
tests/system_command/: system_command.rs  system_command.slt  system_command_fail.slt  system_command_fail_2.slt
tests/test_dir_escape/: test_dir_escape.rs  test_dir_escape.slt
tests/validator/: validator.rs
