[workspace]
members = ["sqllogictest", "sqllogictest-bin", "sqllogictest-engines", "tests"]

[workspace.package]
version = "0.16.0"
edition = "2021"
homepage = "https://github.com/risinglightdb/sqllogictest-rs"
keywords = ["sql", "database", "parser", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/risinglightdb/sqllogictest-rs"
