[workspace]
resolver = "2"
members = ["sqllogictest", "sqllogictest-bin", "sqllogictest-engines", "tests"]

[workspace.package]
version = "0.29.1"
edition = "2021"
homepage = "https://github.com/risinglightdb/sqllogictest-rs"
keywords = ["sql", "database", "parser", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/risinglightdb/sqllogictest-rs"

# We want to enable vendoring, but it breaks developer experience
# See: https://github.com/rust-lang/rust-analyzer/issues/20250
# The goal are going to be the following:
#   * Each dependency is pinned with it's minor version.
#   * Update of minor version must be done *manually*.
#   * Update of patch version can be done with `cargo vendor`.
#
# But for now we pin **patch** version to prevent updates 
# from happening without our knowledge.

[workspace.dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
bytes = "=1.10.1"
chrono = "=0.4.42"
clap = "=4.5.48"
console = "=0.15.11"                                             # TODO update to 0.16
easy-ext = "=1.0.2"
educe = "=0.6.0"
fs-err = "=3.1.3"
futures = "=0.3.31"
glob = "=0.3.3"
humantime = "=2.3.0"
itertools = "=0.13.0"                                           # TODO update to 0.14
libtest-mimic = "=0.8.1"
log = "=0.4.28"
md-5 = "=0.10.6"
mysql_async = { version = "=0.34.2", default-features = false } # TODO update to 0.36
pg_interval = "=0.4.2"
postgres_array = "=0.11.1"
postgres-types = "=0.2.11"                                       # TODO update to 0.2.11
owo-colors = "=4.2.3"
quick-junit = "=0.5.1"
rand = "=0.8.5"                                                 # TODO update to 0.9
regex = "=1.11.3"
rust_decimal = "=1.36.0"                                        # TODO update to 1.38
similar = "=2.7.0"
serde = "=1.0.228"
serde_json = "=1.0.145"
subst = "=0.3.8"
tempfile = "=3.23.0"
thiserror = "=2.0.17"
tokio = "=1.47.1"
tokio-postgres = "=0.7.15"
tokio-util = "=0.7.16"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.20"
