[package]
name = "sqllogictest-bin"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest CLI."

[[bin]]
name = "sqllogictest"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4", features = ["derive", "env"] }
console = { version = "0.15" }
futures = { version = "0.3", default-features = false }
glob = "0.3"
itertools = "0.13"
quick-junit = { version = "0.4" }
rand = "0.8"
sqllogictest = { path = "../sqllogictest", version = "0.20" }
sqllogictest-engines = { path = "../sqllogictest-engines", version = "0.20" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
] }
fs-err = "2.9.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
