[package]
name = "sqllogictest-bin"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest CLI."

[[bin]]
name = "sqllogictest"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
async-trait = "0.1"
chrono = { version = "0.4" }
clap = { version = "4", features = ["derive", "env"] }
console = { version = "0.15" }
easy-ext = "1"
futures = { version = "0.3", default-features = false }
glob = "0.3"
itertools = "0.13"
quick-junit = { version = "0.5" }
rand = "0.8"
sqllogictest = { path = "../sqllogictest", version = "0.28" }
sqllogictest-engines = { path = "../sqllogictest-engines", version = "0.28" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
] }
tokio-util = { version = "0.7.12", features = ["rt"] }
fs-err = "3.0.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
