[package]
name = "sqllogictest-bin"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest CLI."

[[bin]]
name = "sqllogictest"
path = "src/main.rs"

[dependencies]
sqllogictest = { path = "../sqllogictest", version = "0.28" }
sqllogictest-engines = { path = "../sqllogictest-engines", version = "0.28" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
console = { workspace = true }
easy-ext = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true, default-features = false }
glob = { workspace = true }
itertools = { workspace = true }
quick-junit = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
