[package]
name = "sqllogictest-engines"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest built-in engines."

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4" }
futures = { version = "0.3", default-features = false }
log = "0.4"
mysql_async = { version = "0.34.2", default-features = false, features = ["minimal"] }
pg_interval = "0.4"
postgres_array = "0.11.1"
postgres-types = { version = "0.2.8", features = ["derive", "with-chrono-0_4", "with-serde_json-1"] }
rust_decimal = { version = "1.36.0", features = ["tokio-pg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqllogictest = { path = "../sqllogictest", version = "0.28" }
thiserror = "2"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
] }
tokio-postgres = { version = "0.7" }
tokio-util = { version = "0.7", features = ["codec"] }
