[package]
name = "sqllogictest-engines"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest built-in engines."

[dependencies]
sqllogictest = { path = "../sqllogictest", version = "0.28" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true, default-features = false }
log = { workspace = true }
mysql_async = { workspace = true, default-features = false, features = [
    "minimal",
] }
pg_interval = { workspace = true }
postgres_array = { workspace = true }
postgres-types = { workspace = true, features = [
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
rust_decimal = { workspace = true, features = ["tokio-pg"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "fs",
    "process",
] }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
