[package]
name = "sqllogictest"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest parser and runner."

[dependencies]
async-trait = "0.1"
educe = "0.6"
fs-err = "3"
futures = "0.3"
glob = "0.3"
humantime = "2"
itertools = "0.13"
libtest-mimic = "0.8"
md-5 = "0.10"
owo-colors = "4"
regex = "1"
similar = "2"
subst = "0.3"
tempfile = "3"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
