[package]
name = "sqllogictest"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Sqllogictest parser and runner."

[dependencies]
async-trait = { workspace = true }
educe = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
libtest-mimic = { workspace = true }
md-5 = { workspace = true }
owo-colors = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
subst = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
