[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqllogictest = { path = "../sqllogictest" }
rusqlite = { version = "0.28", features = ["bundled"] }

[[test]]
name = "harness"
path = "./harness.rs"
harness = false

[[test]]
name = "sqlite"
path = "./sqlite.rs"
harness = false
