[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqllogictest = { path = "../sqllogictest" }

[[test]]
name = "harness"
path = "./harness.rs"
harness = false

[[test]]
name = "custom_type"
path = "./custom_type/custom_type.rs"

[[test]]
name = "validator"
path = "./validator/validator.rs"

[[test]]
name = "test_dir_escape"
path = "./test_dir_escape/test_dir_escape.rs"

[[test]]
name = "system_command"
path = "./system_command/system_command.rs"
